[gd_scene load_steps=14 format=3 uid="uid://713ktg8ejflv"]

[ext_resource type="Script" uid="uid://byybf8bpoqfc2" path="res://skriptit/valocharacter.gd" id="1_0y8yp"]
[ext_resource type="Texture2D" uid="uid://bmvtp7yssbvk2" path="res://grafiikka/Valo512.png" id="2_kid4c"]
[ext_resource type="Texture2D" uid="uid://b5gd4vu60u7ls" path="res://grafiikka/LightBall.png" id="3_vppnu"]
[ext_resource type="AudioStream" uid="uid://ctkufn8j2dbv0" path="res://audio/valopallo/valopallo_heitetaan1_mono.wav" id="4_1ql26"]
[ext_resource type="AudioStream" uid="uid://jmpel44x4g5k" path="res://audio/valopallo/valopallo_kimpoaa1_CG_mono.wav" id="5_35uxy"]
[ext_resource type="AudioStream" uid="uid://b552p0vjil1na" path="res://audio/koynnosovi/koynnosovi1.wav" id="5_g0pli"]
[ext_resource type="AudioStream" uid="uid://bjycmvoahwydx" path="res://audio/valopallo/valopallo_kimpoaa2_CE_mono.wav" id="6_k58co"]
[ext_resource type="AudioStream" uid="uid://d0up845wq3aos" path="res://audio/valopallo/valopallo_kimpoaa3_GE_mono.wav" id="7_8xih3"]
[ext_resource type="AudioStream" uid="uid://c1qoltjvieqv2" path="res://audio/valopallo/valopallo_hajoaa1_mono.wav" id="8_b1a0l"]

[sub_resource type="CircleShape2D" id="CircleShape2D_k88go"]

[sub_resource type="CircleShape2D" id="CircleShape2D_g1etc"]
radius = 258.002

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_ekjm1"]
streams_count = 3
stream_0/stream = ExtResource("5_35uxy")
stream_1/stream = ExtResource("6_k58co")
stream_2/stream = ExtResource("7_8xih3")

[sub_resource type="CircleShape2D" id="CircleShape2D_1q7yk"]

[node name="ValoCharacter" type="CharacterBody2D" groups=["valopallo"]]
light_mask = 2
collision_layer = 4
script = ExtResource("1_0y8yp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_k88go")

[node name="PointLight2D" type="PointLight2D" parent="."]
color = Color(0.971574, 0.871545, 0.66419, 1)
energy = 2.0
blend_mode = 2
shadow_enabled = true
shadow_filter = 1
texture = ExtResource("2_kid4c")
height = 60.0

[node name="PointLight2D2" type="PointLight2D" parent="."]
color = Color(0.971574, 0.871545, 0.66419, 1)
energy = 2.0
blend_mode = 2
range_item_cull_mask = 2
shadow_enabled = true
shadow_filter = 1
texture = ExtResource("2_kid4c")
height = 60.0

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(5.96046e-08, 0)
texture = ExtResource("3_vppnu")

[node name="Area2D" type="Area2D" parent="." groups=["valonlahde"]]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_g1etc")

[node name="Timer" type="Timer" parent="."]
wait_time = 7.0
one_shot = true
autostart = true

[node name="AudioValopallonHeitto" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_1ql26")
bus = &"Kaiku"

[node name="AudioValopallonKimpoaminen" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_ekjm1")
bus = &"Kaiku"

[node name="AudioValopalloHajoaa" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_b1a0l")
bus = &"Kaiku"

[node name="AudioKoynnosOvi" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_g0pli")
bus = &"Kaiku"

[node name="Area2DVesiTarkistus" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2DVesiTarkistus"]
shape = SubResource("CircleShape2D_1q7yk")

[connection signal="area_entered" from="Area2DVesiTarkistus" to="." method="_on_vesi_tarkistus_area_entered"]
